--- a/styles.html
+++ b/styles.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>Title</title>
+</head>
 
+<body>
+  <h1>Otsikko</h1>
+  
+  <p>Kappale</p>
+  
+  <div>
+    <h1>ordered list ostikko</h1>
+    <ol>
+      <li>lista 1</li>
+      <li>lista 2</li>
+    </ol>
+  </div>
+  
+  <ul>
+    <li>listan kohta yksi</li>
+    <li>listan kohta kaksi</li>
+  </ul>
+  
+  
+  
+    
+  
+</body>
+</html>
