--- a/second.html
+++ b/second.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>Title</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 
+<body>
+  <h1 style="background-color":Yellow;">Banaani</h1>
+  <p>Käydään hieman läpi mitä banaanit ovat ja miksi ne ovat niin suosittuja.</p>
+
+</body>
+</html>
