--- a/second.html
+++ b/second.html
@@ -9,6 +9,8 @@
 <body>
   <h1 style="background-color":Yellow;">Banaani</h1>
   <p>Käydään hieman läpi mitä banaanit ovat ja miksi ne ovat niin suosittuja.</p>
+  
+  <a href="index.html">index</a>
 
 </body>
 </html>
