--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <h1 style="background-color":Orange;">Ensimmäinen koskaan tekemäni sivu</h1>
   <p>Tästä se lähtee.</p>
 
+  <a href="second.html">second</a>
+                                       
 </body>
 </html>
