--- a/second.html
+++ b/second.html
@@ -11,6 +11,15 @@
   <p>Käydään hieman läpi mitä banaanit ovat ja miksi ne ovat niin suosittuja.</p>
   
   <a href="index.html">index</a>
-
+  
+  <img src="img_banana.jpg" alt="Image of banana" </img>
+  
+  <figure>
+    <img src="img_multiple_bananas" alt="Lots of bananas" />
+    <figcaption>There is bananans of different sizes and shapes.</figcaption>
+  </figure>
+                                                         
+   <progress value="45" max="100"></progress>
+                                                         
 </body>
 </html>
