--- a/second.html
+++ b/second.html
@@ -19,10 +19,10 @@
                                        
   <a href="index.html">index</a>
   
-  <img src="img_banana.jpg" alt="Image of banana" >
+  <img src="Images/img_banana.jpg" alt="Image of banana" >
   
   <figure>
-    <img src="img_multiple_bananas" alt="Lots of bananas" >
+    <img src="Images/img_multiple_bananas" alt="Lots of bananas" >
     <figcaption>There is bananans of different sizes and shapes.</figcaption>
   </figure>
                                                          
