--- a/second.html
+++ b/second.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1 style="background-color:Yellow;">Banaani</h1>
+  <h1>Banaani</h1>
   <br>
   
   <p>Käydään hieman läpi mitä banaanit ovat ja miksi ne ovat niin suosittuja.</p>
@@ -31,7 +31,7 @@
   </figure>
    <br>
   
-  <h3>Kuinka paljon tiedän html:stä ja CSS:stä</h3>
+  <h2>Kuinka paljon tiedän html:stä ja CSS:stä</h2>
    <progress value="10" max="100"></progress>
                                                          
 </body>
