--- a/second.html
+++ b/second.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Title</title>
+<title>Second</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
