--- a/second.html
+++ b/second.html
@@ -26,7 +26,7 @@
   <br>
   
   <figure>
-    <img src = "Images/img_multiple_bananas" alt="Lots of bananas" >
+    <img src = "img_multiple_bananas.jpg" alt="Lots of bananas" >
     <figcaption>There is bananans of different sizes and shapes.</figcaption>
   </figure>
    <br>
