--- a/second.html
+++ b/second.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Second</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+    <title>Second</title>
+      <link rel="stylesheet" href="styles.css"/>
 </head>
 
 <body>
