--- a/second.html
+++ b/second.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
     <title>Second</title>
-      <link rel="stylesheet" href="styles.css"/>
+      <link rel="stylesheet" href="mystyle.css"/>
 </head>
 
 <body>
