--- a/second.html
+++ b/second.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8">
     <title>Second</title>
       <link rel="stylesheet" href="mystyle.css"/>
+  body {
+      background-color: Red;
+  }
+  
 </head>
 
 <body>
