--- a/second.html
+++ b/second.html
@@ -4,13 +4,10 @@
   <meta charset="utf-8">
     <title>Second</title>
       <link rel="stylesheet" href="mystyle.css"/>
-  body {
-      background-color: Red;
-  }
   
 </head>
 
-<body>
+<body style="background-color: Red;">
   <h1>Banaani</h1>
   <br>
   
