--- a/second.html
+++ b/second.html
@@ -4,10 +4,14 @@
   <meta charset="utf-8">
     <title>Second</title>
       <link rel="stylesheet" type="text/css" href="mystyle.css">
-  
+<style>
+  body {
+    background-color:Red;
+  }
+  </style>
 </head>
 
-<body style="background-color: Red;">
+<body>
   <h1>Banaani</h1>
   <br>
   
