--- a/second.html
+++ b/second.html
@@ -26,13 +26,13 @@
   <br>
   
   <figure>
-    <img src = "img_multiple_bananas.jpg" alt="Lots of bananas" >
-    <figcaption>There is bananans of different sizes and shapes.</figcaption>
+    <img src = "img_multiple_bananas.jpg" alt="Paljon banaaneja" >
+    <figcaption>Banaaneja on olemassa eri muotoisia ja kokoisia.</figcaption>
   </figure>
    <br>
   
   <h2>Kuinka paljon tiedän html:stä ja CSS:stä</h2>
-   <progress value="10" max="100"></progress>
+   <progress value="10" max="100" style="color: Red;"></progress>
                                                          
 </body>
 </html>
