--- a/second.html
+++ b/second.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8">
     <title>Second</title>
       <link rel="stylesheet" type="text/css" href="mystyle.css">
+  <style>
+    body {
+  background-color: rgb(250, 242, 40, 0.6);
+}
+  </style>
 </head>
 
 <body>
