--- a/second.html
+++ b/second.html
@@ -5,8 +5,42 @@
     <title>Second</title>
       <link rel="stylesheet" type="text/css" href="mystyle.css">
   <style>
-    body {
+body {
   background-color: rgb(250, 242, 40, 0.6);
+}
+
+h1 {
+  font-size: 20px;
+  border-style: dotted;
+  border-radius: 15px;
+}
+
+h2 {
+  font-size: 15px;
+  border-style: dotted;
+  border-radius: 20px;
+  margin: 100px;
+  padding: 200px;
+}
+
+p {
+  font-size: 12px;
+  background-color: rgb(25, 255, 71);
+  color:Black;
+}
+
+.div {
+  border-style: dotted;
+  margin: 2px;
+  border: 100px;
+}
+
+ol {
+  list-style-type: lower-alpha;
+}
+
+ul {
+  list-style-type: square;
 }
   </style>
 </head>
