--- a/second.html
+++ b/second.html
@@ -33,7 +33,7 @@
    <progress value="5" max="100" style="color: Red;"></progress>
   
   <br>
-  <a href="index.html">index</a>
+  <a href="styles.html">index</a>
                                                          
 </body>
 </html>
