--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-  <h1 style="background-color":Orange;">Ensimmäinen koskaan tekemäni sivu</h1>
+  <h1 style="background-color":Pink;">Ensimmäinen koskaan tekemäni sivu</h1>
   <p>Tästä se lähtee.</p>
 
-  <a href="second.html">second</a>
+  <a href="second.html">Linkki second-sivulle</a>
                                        
 </body>
 </html>
