--- a/second.html
+++ b/second.html
@@ -30,7 +30,7 @@
    <br>
   
   <h2>Banaanien osuus keskiverto suomalaisen ruokavaliossa</h2>
-   <progress value="5" max="100" style="color: Red;"></progress>
+   <progress value="5" max="100"></progress>
   
   <br>
   <a href="index.html">Linkki index-sivulle</a>
