--- a/styles.html
+++ b/styles.html
@@ -4,6 +4,43 @@
 <meta charset="utf-8" />
 <title>Title</title>
 <link rel="stylesheet" href="styles.css">
+  <styles>
+    body {
+  background-color: rgb(0, 0, 0);
+  color:White;
+}
+
+h1 {
+  font-size: 20px;
+}
+
+h2 {
+  font-size: 15px;
+  border-style: dotted;
+  border-radius: 20px;
+  margin: 100px;
+  padding: 200px;
+}
+
+p {
+  font-size: 12px;
+  color:Green;
+}
+
+.div {
+  border-style: dotted;
+  margin: 2px;
+  border: 100px;
+}
+
+ol {
+  list-style-type: lower-alpha;
+}
+
+ul {
+  list-style-type: square;
+}
+  </styles>
 </head>
 
 <body>
