--- a/styles.html
+++ b/styles.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Title</title>
 <link rel="stylesheet" href="styles.css">
-  <styles>
+  <style>
     body {
   background-color: rgb(0, 0, 0);
   color:White;
@@ -40,7 +40,7 @@ ol {
 ul {
   list-style-type: square;
 }
-  </styles>
+  </style>
 </head>
 
 <body>
