--- a/third.html
+++ b/third.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+    <title>Second</title>
+      <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
+</head>
+
+<body>
+  <header>
+    <h1>Banaani</h1>
+  </header>
+  
+  <nav>
+    <ul>
+      <li><a href="index.html"</a></li>
+      <li><a href="second.html"</a></li>
+    </ul>
+  </nav>
+  
+  <section>
+    <p>Banaanista voi olla montaa eri mieltä. Toiset inhoavat banaaneja, mutta toiset eivät voi olla ilman niitä. Toisille banaani on herkku, toinen taas syö banaaneja terveysvaikutusten takia.</p>
+    <p>Banaani sisältää paljon B6-vitamiinia. Tästä johtuen banaaneilla on useita terveysvaikutuksia. </p>
+      <ul>
+        <li>vähentävän turvotusta</li>
+        <li>suojaa kakkostyypin diabetekselta</li>
+        <li>tukee laihduttamista</li>
+        <li>hermosto vahvistuu</li>
+        <li>uttavan valkosolujen tuotantoa.</li>
+    </ul>
+  </section>
+  
+  <footer>
+    <p>Banaanit is the best</p>
+  </footer>
+
+
+</body>
+</html>
