--- a/third.html
+++ b/third.html
@@ -14,8 +14,8 @@
   
   <nav>
     <ul>
-      <li><a href="index.html"</a></li>
-      <li><a href="second.html"</a></li>
+      <li><a href="index.html">Linkki index-sivulle</a></li>
+      <li><a href="index.html">Linkki second-sivulle</a></li>
     </ul>
   </nav>
   
