--- a/third.html
+++ b/third.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-    <title>Second</title>
-      <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <title>Third</title>
+      <link rel="stylesheet" type="text/css" href="/stylesheet.css">
 
 </head>
 
