--- a/third.html
+++ b/third.html
@@ -54,6 +54,8 @@ padding:10px;
   </nav>
   
 <article id="article">
+  <h2>Banaanien terveyshyödyt</h2>
+  
     <p>Banaanista voi olla montaa eri mieltä. Toiset inhoavat banaaneja, mutta toiset eivät voi olla ilman niitä. Toisille banaani on herkku, toinen taas syö banaaneja terveysvaikutusten takia.</p>
     <p>Banaani sisältää paljon B6-vitamiinia. Tästä johtuen banaaneilla on useita terveysvaikutuksia. </p>
       <ul>
