--- a/second.html
+++ b/second.html
@@ -33,7 +33,7 @@
    <progress value="5" max="100"></progress>
   
   <br>
-  <a href="/index.html">Linkki index-sivulle</a>
+  <a href="index.html">Linkki index-sivulle</a>
 
 </body>
 </html>
