--- a/third.html
+++ b/third.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
     <title>Third</title>
-      <link rel="stylesheet" type="text/css" href="/stylesheet.css">
-
+      <link rel="stylesheet" href="/stylesheet.css">
 </head>
-
 <body>
+  
   <header id="header">
     <h1>Banaani</h1>
   </header>
