--- a/third.html
+++ b/third.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
     <title>Third</title>
-      <link rel="stylesheet" href="/stylesheet.css">
+      <link rel="stylesheet"
+            type="text/css"
+            href="stylesheet.css">
 </head>
 <body>
   
