--- a/third.html
+++ b/third.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+    <title>Third</title>
+      <link rel="stylesheet" type="text/css" href="third.css">
 
+</head>
+  <body>
+    
+  <header>
+    <h1>Koripallo</h1>
+  </header>
+  
+  <section>
+  <p>Koripallo on joukkuelaji, joka on keksitty Yhdysvalloissa 1800-luvun loppupuolella. Pelin idea on tehdä mahdollisimman paljon koreja, joista saa pisteitä 1-3 riippuen mistä se on heitetty.
+    Joukkueeseen kuuluu 12 pelaajaa, joista kentällä on kerrallaan 5 pelaajaa. </p>
+  </section>
+  
+  <article>
+  <h2>Koripallon historia</h2>
+  <p>Kanadalainen opettaja James Naismith keksi koripallon vuonna 1891, jolloin hänelle annettiin tehtäväksi keksiä uusi laji, jota pystytään pelaan talvisin. 
+    Hän halusi keksiä pelin, jossa ei ole taklauksia tai liikaa fyysistä kontaktia. Myös taidon piti korostua pelissä ei voiman.</p>
+  
+  <h3>NBA</h3>
+  <p>National Basketball Association, NBA, perustettiin vuonna 1946 koordinoimaan yhdysvaltalaisten huippujoukkueiden välisiä otteluita. NBA on erittäin suosittu Yhdysvalloissa,
+    ja tunnettuja NBA:ssa pelanneita henkilöitä ovat Michael Jordan, Dennis Rodman, Scottie Pippen Shaquille O'Neal, ja Kobe Bryant.</p>
+  </article>
+  
+  <aside>
+  <ul>
+    <li><a href="https://en.wikipedia.org/wiki/James_Naismith">James Naismith</a></li>
+    <li><a href="https://www.nba.com/">NBA</a></li>
+  </ul>
+  </aside>
+  
+  
+  
+  
+  
+  
+  </body>
+</html>
