--- a/third.html
+++ b/third.html
@@ -29,7 +29,7 @@
   </article>
   
   <aside>
-  <ul>
+  <ul id="linkit">
     <li><a href="https://en.wikipedia.org/wiki/James_Naismith">James Naismith</a></li>
     <li><a href="https://www.nba.com/">NBA</a></li>
   </ul>
