--- a/third.html
+++ b/third.html
@@ -14,11 +14,19 @@
   
   <section>
     
+  <nav id="linkit">
+  <ul>
+    <li><a href="https://en.wikipedia.org/wiki/James_Naismith">James Naismith</a></li>
+    <li><a href="https://www.nba.com/">NBA</a></li>
+  </ul>
+  </nav>
+  
+<article>
   <p>Koripallo on joukkuelaji, joka on keksitty Yhdysvalloissa 1800-luvun loppupuolella. Pelin idea on tehdä mahdollisimman paljon koreja, joista saa pisteitä 1-3 riippuen mistä se on heitetty.
     Joukkueeseen kuuluu 12 pelaajaa, joista kentällä on kerrallaan 5 pelaajaa. </p>
 
   
-  <article>
+
   <h2>Koripallon historia</h2>
   <p>Kanadalainen opettaja James Naismith keksi koripallon vuonna 1891, jolloin hänelle annettiin tehtäväksi keksiä uusi laji, jota pystytään pelaan talvisin. 
     Hän halusi keksiä pelin, jossa ei ole taklauksia tai liikaa fyysistä kontaktia. Myös taidon piti korostua pelissä ei voiman.</p>
@@ -28,16 +36,11 @@
     ja tunnettuja NBA:ssa pelanneita henkilöitä ovat Michael Jordan, Dennis Rodman, Scottie Pippen Shaquille O'Neal, ja Kobe Bryant.</p>
   </article>
   
-  <aside>
-  <ul id="linkit">
-    <li><a href="https://en.wikipedia.org/wiki/James_Naismith">James Naismith</a></li>
-    <li><a href="https://www.nba.com/">NBA</a></li>
-  </ul>
-  </aside>
-  
     </section>
   
-  
+  <footer>
+  <p>This is footer</p>
+  </footer>
   
   
   </body>
