--- a/third.html
+++ b/third.html
@@ -13,6 +13,14 @@
   </header>
   
   <section>
+    <ul id="horizontallist">
+    <li class="centerlist"><a href="index.html">First</a></li>
+    <li class="centerlist"><a href="second.html">Second</a></li>
+    <li class="centerlist"><a href="third.html">Third</a></li>
+  </ul>
+  </nav>
+  </section>
+  <section>
     
   <nav id="linkit">
   <ul>
