--- a/third.html
+++ b/third.html
@@ -14,9 +14,9 @@
   
   <section>
     <ul id="horizontallist">
-    <li class="centerlist"><a href="index.html">First</a></li>
-    <li class="centerlist"><a href="second.html">Second</a></li>
-    <li class="centerlist"><a href="third.html">Third</a></li>
+    <li class="centerlist"><a href="index.html" target="_blank">First</a></li>
+    <li class="centerlist"><a href="second.html" target="_blank">Second</a></li>
+    <li class="centerlist"><a href="third.html" target="_blank">Third</a></li>
   </ul>
   </nav>
   </section>
@@ -24,8 +24,8 @@
     
   <nav id="linkit">
   <ul>
-    <li><a href="https://en.wikipedia.org/wiki/James_Naismith">James Naismith</a></li>
-    <li><a href="https://www.nba.com/">NBA</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/James_Naismith" target="_blank">James Naismith</a></li>
+    <li><a href="https://www.nba.com/" target="_blank">NBA</a></li>
   </ul>
   </nav>
   
