--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <p>Tästä se lähtee.</p>
 
   <a href="second.html">Linkki second-sivulle</a>
+  <a href="third.html">Linkki third-sivulle</a>
                                        
 </body>
 </html>
