--- a/7B.html
+++ b/7B.html
@@ -19,7 +19,7 @@
 
   <div class="row">
     <div class="col-sm-4">Ensimmäinen rivi, ensimmäinen kolumni</div>
-    <div class="col-sm-4">Ensimmäinen rivi, toinen kolumnicols</div>
+    <div class="col-sm-4">Ensimmäinen rivi, toinen kolumni</div>
     <div class="col-sm-4">Ensimmäinen rivi, kolmas kolumni</div>
   </div>
   
