--- a/9B.html
+++ b/9B.html
@@ -24,7 +24,7 @@
 </nav>
 
 <div class="container">
-  <div class="jumbotron">
+  <div class="jumbotron text-center">
     <h1>Jumbotron</h1>      
     <p>This is a jumbotron.</p>
   </div>    
@@ -32,6 +32,15 @@
   
 <div class="container">           
   <img src="https://d23.com/app/uploads/2015/07/23-jobs-donald-duck-has-tried_OMD-feat-1-780x440-1440537749.jpg" class="img-circle" alt="Aku Ankka" width="304" height="236"> 
+</div>
+
+<div class="container">
+	<div class="buttons text-center">
+  <h2>Some buttons</h2>
+  <button type="button" class="btn">Basic</button>
+  <button type="button" class="btn btn-default">Default</button>
+  <button type="button" class="btn btn-success">Success</button>
+</div>
 </div>
 
 </body>
