--- a/9B.html
+++ b/9B.html
@@ -29,9 +29,24 @@
     <p>This is a jumbotron.</p>
   </div>    
 </div>
-  
-<div class="container">           
-  <img src="https://d23.com/app/uploads/2015/07/23-jobs-donald-duck-has-tried_OMD-feat-1-780x440-1440537749.jpg" class="img-circle" alt="Aku Ankka" width="304" height="236"> 
+
+  <div class="row">
+    <div class="col-sm-6">
+      <img src="https://d23.com/app/uploads/2015/07/23-jobs-donald-duck-has-tried_OMD-feat-1-780x440-1440537749.jpg" class="img-circle" alt="Aku Ankka" width="304" height="236"> 
+    </div>
+    <div class="col-sm-6">
+      <img class="responsive" src="https://d23.com/app/uploads/2015/07/23-jobs-donald-duck-has-tried_OMD-feat-1-780x440-1440537749.jpg" alt="Aku Ankka" width="304" height="236"> 
+    </div>
+  </div>
+</div>
+
+<div class="container">
+	<div class="buttons text-center">
+  <h2>Some buttons</h2>
+  <button type="button" class="btn">Basic</button>
+  <button type="button" class="btn btn-default">Default</button>
+  <button type="button" class="btn btn-success">Success</button>
+</div>
 </div>
 
 </body>
