--- a/9B.html
+++ b/9B.html
@@ -11,7 +11,7 @@
 <body>
 
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container-fluid" style="background-color:black;">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">MyWebSite</a>
     </div>
