--- a/08B_3.html
+++ b/08B_3.html
@@ -4,42 +4,37 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4"> 
-	<span style='font-size:100px;'>&#11035;</span>
-    </div>
+
+<!-- Navigaatio-->
+<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+<div class="container-fluid padding">
+	<a class="navbar-brand" href="#">&#11035;</a>
     
-    <div class="col-sm-4"> 
-			<ul>
-			<li>
-				<a href="08B_1.html">Link 1</a>
-			</li>
-			<li>
-				<a href="08B_2.html">Link 2</a>
-			</li>
-			<li>
-				<a href="08B_3.html">Link 3</a>
-			</li>
-		</ul>
-    </div>
+    <ul  class="navbar-nav ml-auto">
+		<li><a href="08B_1.html">Link1</a>
+		</li>
+		<li><a href="08B_2.html">Link2</a>
+		</li>
+		<li><a href="08B_3.html">Link3</a>
+		</li>
+	</ul>
     
-    <div class="col-sm-4"> 
-	  <form action="/action_page.php">
-      <input type="text" placeholder="Etsi" name="search">
-      <button type="submit"><i class="fa fa-search"></i></button>
-    </form>
-    </div>
-  </div>
 </div>
+</nav>
 
+<!-- Hakukenttä-->
+    <div class="col-sm-12"> 
+	<form action="/action_page.php">
+     		<input type="text" placeholder="Etsi" name="search">
+     		<button type="submit"><i class="fa fa-search"></i></button>
+    	</form>
+    </div>
 
+<hr class="dark">
   
 <div class="container">
   <div class="row">
@@ -74,6 +69,9 @@
   </div>
 </div>
 
+<hr class="dark">	
+
+<!--Yhteystiedot-->
 <h2>Yhteystiedot</h2>
 
 
@@ -88,10 +86,13 @@
   </div>
 </div>
 
-<div class="container">
+<hr class="dark">
+
+<!-- Footer-->
+<div class="container-fluid padding">
   <div class="row">
     <div class="col-sm-8"> 
-    <p>Footer</p>
+    <p>Matkatoimisto.fi</p>
     </div>
     <div class="col-sm-4"> 
     <p>Kuvakkeet</p>
@@ -99,5 +100,10 @@
   </div>
 </div>
 
+<!--jQuery, Popper.js, and Bootstrap JS-->	
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+	
 </body>
 </html>
