--- a/08B_3.html
+++ b/08B_3.html
@@ -36,7 +36,7 @@
 
 <hr class="dark">
   
-<div class="container">
+<div class="container-fluid padding">
   <div class="row">
     <div class="col-sm-2">
       <img src="https://www.rmit.edu.au/content/dam/rmit/au/en/news/news_Melbourne_AdobeStock.jpg" alt="Melbourne" width="100">
@@ -47,7 +47,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container-fluid padding">
   <div class="row">
     <div class="col-sm-2">
       <img src="https://www.rmit.edu.au/content/dam/rmit/au/en/news/news_Melbourne_AdobeStock.jpg" alt="Melbourne" width="100">
@@ -58,7 +58,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container-fluid padding">
   <div class="row">
     <div class="col-sm-2">
       <img src="https://www.rmit.edu.au/content/dam/rmit/au/en/news/news_Melbourne_AdobeStock.jpg" alt="Melbourne" width="100">
@@ -75,7 +75,7 @@
 <h2>Yhteystiedot</h2>
 
 
-<div class="container">
+<div class="container-fluid padding">
   <div class="row">
     <div class="col-sm-4">
       <img src="https://www.rmit.edu.au/content/dam/rmit/au/en/news/news_Melbourne_AdobeStock.jpg" alt="Melbourne" width="300">
