--- a/10B/index.html
+++ b/10B/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+  <title>5B</title>
+    <link rel="styletable"
+          type="text/css"
+          href="styletable.css">
+  
+  
+</head>
+<body>
 
+<h1>Taulukko</h1>
+
+<table>
+  <tr>
+    <th>Maa</th>
+    <th colspan="2">Kaupungit</th>
+  </tr>
+  <tr>
+    <td>Suomi</td>
+    <td>Helsinki</td>
+    <td>Turku</td>
+  </tr>
+    <tr>
+    <td>Ruotsi</td>
+    <td>Tukholma</td>
+    <td>Malmö</td>
+  </tr>
+    <tr>
+    <td>Yhdysvallat</td>
+    <td>New York</td>
+    <td>Kalifornia</td>
+  </tr>
+</table>
+
+<form>
+  <label for="enimi">Etunimi:</label><br>
+  <input type="text" id="enimi" name="enimi" required><br><br>
+  <label for="snimi">Sukunimi:</label><br>
+  <input type="text" id="snimi" name="snimi" required><br><br>
+  <label for="email">email:</label><br>
+  <input type="text" id="email" name="email" required><br><br>
+  <input type="submit" value="Submit">
+</form>  
+
+<h5>Kirjoita kommentti</h5>
+  <textarea rows="4" cols="80"></textarea><br> 
+  
+<input type="checkbox" id="uutiskirje" name="uutiskirje" value="uutiskirje">
+<label for="uutiskirje">Haluan tilata uutiskirjeen</label><br>  
+  
+<select>
+<option value="Suomi">Suomi</option>
+<option value="Ranska">Ranska</option>
+<option value="Kiina">Kiina</option>
+<option value="Portugali">Portugali</option>  
+</select><br>
+  
+<input type="submit" value="Lisää uusi käyttäjä"<br>
+  
+  
+  
+</body>
+</html>
