--- a/10B/index.html
+++ b/10B/index.html
@@ -58,7 +58,7 @@
 <option value="Portugali">Portugali</option>  
 </select><br>
   
-<input type="submit" value="Lisää uusi käyttäjä"<br>
+<input type="submit" value="Lisää uusi käyttäjä"><br>
   
   
   
