--- a/10B/index.html
+++ b/10B/index.html
@@ -5,7 +5,7 @@
   <title>5B</title>
     <link rel="styletable"
           type="text/css"
-          href="styletable.css">
+          href="/styletable.css">
   
   
 </head>
