--- a/12/index.html
+++ b/12/index.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+</head>
+<body>
+
+
+<!-- Navigaatio-->
+<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+<div class="container-fluid">
+	<a class="navbar-brand" href="#">img src=lisää kuva></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="navbar-nav ml-auto">
+		<li class="nav-item active">
+      <a class="nav-link" href="page_one.html">Etusivu</a>
+		</li>
+		<li class="nav-item">
+      <a class="nav-link" href="page_two.html">Suosikit</a>
+		</li>
+		<li class="nav-item">
+      <a class="nav-link" href="page_three.html">Yhteystiedot</a>
+		</li>
+	</ul>
+</div>
+</div>
+</nav>
+
+    
+<!-- Hakukenttä-->
+    <div class="col-sm-12"> 
+	<form action="/action_page.php">
+     		<input type="text" placeholder="Etsi" name="search">
+     		<button type="submit"><i class="fa fa-search"></i></button>
+    	</form>
+    </div>
+    
+  <hr class="dark">
+  
+  <!--iso kuva-->
+ <div>
+   <img src="images/Australia.jpg">
+   <div class="caption">
+     <h1 class="display">Australia</h1>
+     <3>Miksi Australia on niin mahtava paikka</h3>
+     <button type="button" class="btn btn-outline-light btn-lg"><Valitse kohde</button>
+   </div>
+  </div>
+ 
+  
+<hr class="dark">  
+ 
+
+<!-- Footer-->
+<div class="container-fluid padding">
+  <div class="row">
+    <div class="col-sm-8"> 
+    <p>Matkatoimisto.fi</p>
+    </div>
+    <div class="col-sm-4"> 
+    <p>Kuvakkeet</p>
+    </div>
+  </div>
+</div>
+
+<!--jQuery, Popper.js, and Bootstrap JS-->	
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+	
+</body>
+</html>
 
