--- a/12/index.html
+++ b/12/index.html
@@ -45,11 +45,11 @@
   
   <!--iso kuva-->
  <div>
-   <img src="images/Australia.jpg">
+   <img src="images/Sydney.jpg">
    <div class="caption">
      <h1 class="display">Australia</h1>
      <3>Miksi Australia on niin mahtava paikka</h3>
-     <button type="button" class="btn btn-outline-light btn-lg"><Valitse kohde</button>
+     <button type="button" class="btn btn-outline-light btn-lg"><Valitse kohde></button>
    </div>
   </div>
  
