--- a/12/index.html
+++ b/12/index.html
@@ -12,7 +12,7 @@
 <!-- Navigaatio-->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 <div class="container-fluid">
-	<a class="navbar-brand" href="#">img src=lisää kuva></a>
+	<a class="navbar-brand" href="#">img src="images/kengu.jpg" class="img-circle" alt="kengu" width="100></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
       <span class="navbar-toggler-icon"></span>
   </button>
