--- a/12/index.html
+++ b/12/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Piialiisan verkkosivu</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 
@@ -48,7 +49,7 @@
    <img src="images/Sydney.jpg">
    <div class="caption">
      <h1 class="display">Australia</h1>
-     <3>Miksi Australia on niin mahtava paikka</h3>
+     <h3>Miksi Australia on niin mahtava paikka</h3>
      <button type="button" class="btn btn-outline-light btn-lg"><Valitse kohde></button>
    </div>
   </div>
